--- a/node-development/package.json
+++ b/node-development/package.json
@@ -64,7 +64,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run sass & npm run watch:media & npm run watch:svg & npm run watch:svgimgs & npm run watch:js & npm run watch:css",
+    "start": "npm run sass & npm run watch:php & npm run watch:media & npm run watch:svg & npm run watch:svgimgs & npm run watch:js & npm run watch:css",
     "build": "npm run sass:build && npm run copy:css && npm run babeljs && npm run uglifyjs && npm run concatjs && npm run postcss && npm run criticalcss ",
     "stop": "stop http-server",
     "sass": "node-sass --sourceMap=true -w ./app/sass/ -o ./app/css/",
